--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h2><span>Tentang</span> kami</h2>
       <div class="row">
         <div class="about-img">
-          <img src="../IMG/RotiKami.jpg" alt="Tentang Kami" />
+          <img src="IMG/RotiKami.jpg" alt="Tentang Kami" />
         </div>
         <div class="contentkami">
           <h3>Kenapa memilih roti kami?</h3>
