--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="menu-card">
           <img
-            src="../IMG/rotimenu (1).jpg"
+            src="IMG/rotimenu (1).jpg"
             alt="rotimenu"
             class="menu-card-img"
           />
