--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="../IMG/rotimenu (1).jpg"
+            src="IMG/rotimenu (1).jpg"
             alt="rotimenu"
             class="menu-card-img"
           />
@@ -101,7 +101,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="../IMG/rotimenu (1).jpg"
+            src="IMG/rotimenu (1).jpg"
             alt="rotimenu"
             class="menu-card-img"
           />
@@ -110,7 +110,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="../IMG/rotimenu (1).jpg"
+            src="IMG/rotimenu (1).jpg"
             alt="rotimenu"
             class="menu-card-img"
           />
@@ -119,7 +119,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="../IMG/rotimenu (1).jpg"
+            src="IMG/rotimenu (1).jpg"
             alt="rotimenu"
             class="menu-card-img"
           />
