--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Roti<span>Senja</span>.</a>
+      <a href="#" class="navbar-logo">Roti<span>Ridd</span>.</a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
