--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
       feather.replace();
     </script>
     <!-- MyJavascript -->
-    <script src="/Js/script.js"></script>
+    <script src="Js/script.js"></script>
   </body>
 </html>
